# Redis-Streams-Log-Processing

./: CMakeLists.txt  README.md
src/server/: CMakeLists.txt  Consumer.h  Message.h  MessageSerializer.cpp  MessageSerializer.h  Producer.cpp  Producer.h  ProducerManager.cpp  ProducerManager.h  main.cpp
